# BachelorProject

./: CMakeLists.txt  README.md
defense/: beamer-presentation.aux  beamer-presentation.nav  beamer-presentation.out  beamer-presentation.tex  beamer-presentation.toc
defense/img/ggb/: gauss.ggb  rendering-eq.ggb
defense/img/results/ssao/: timings.txt
report/: main.aux  main.dvi  main.out  main.tex  main.toc
report/1introduction/: intro.tex  intro.tex.aux
report/2hypethesis/: hyp.tex  hyp.tex.aux
report/3theory/: theory.tex  theory.tex.aux
report/4implementation/: impl.tex  impl.tex.aux
report/5results/: results.tex  results.tex.aux
report/6discussion/: disc.tex.aux
report/7conclusion/: conc.tex  conc.tex.aux
report/bibliography/: bib.tex
report/diverse/: geogebra commands.txt  glsl-listings.tex  hemisphere.ggb
report/img/gauss/: gauss-fig.tex
report/img/ggb/: 2-layer.ggb  spiral-sampling.ggb
report/project_plan/: project_plan.aux  project_plan.out  project_plan.tex
shaders/: apply_SSAO.frag  apply_rad_bounce.frag  bilat_1ch_hor.frag  bilat_1ch_vert.frag  bilat_hor.frag  bilat_vert_wblend.frag  bilin.frag  compose.frag  detect_edges.frag  gen_gbuffer.frag  gen_gbuffer.geom  gen_gbuffer.vert  glslangValidator  lambert.frag  layered_quad.geom  layered_texture.frag  rad_backup.txt  shadow_gen.frag  shadow_gen.geom  shadow_gen.vert  test.frag  test.vert  text.frag  text.vert  texture_quad.vert  texture_quad_w_geom.vert  unlayered_texture.frag
src/: Camera.cpp  Camera.h  Control.cpp  Control.h  DebugDrawer.cpp  DebugDrawer.h  GBuffer.cpp  GBuffer.h  GLError.cpp  MeshObject.cpp  MeshObject.h  Message.cpp  Message.h  MyUtility.cpp  MyUtility.h  RenderEngine.cpp  RenderEngine.h  TextRender.cpp  TextRender.h  filters.cpp  filters.h  light.cpp  light.h  main.cpp  shader.cpp  shader.h
(+5 files in other folders)
